# exercise-machina

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Untitled-Copy1.ipynb  Untitled-Copy3.ipynb  Untitled.ipynb  analyze.py  analyze_4fps.py  assemble_4fps.py  basic-kalman.ipynb  build_monitor_dataset.py  cadence-to-watts.ipynb  eg.sh  final-final-2.ipynb  findings.py  frames.000099.csv  frames.000199.csv  frames.000299.csv  frames.000399.csv  frames.000499.csv  frames.000599.csv  frames.000699.csv  frames.000799.csv  frames.000899.csv  frames.000999.csv  frames.001099.csv  frames.001199.csv  frames.001299.csv  frames.001399.csv  frames.001499.csv  frames.001599.csv  frames.001699.csv  frames.001799.csv  frames.001899.csv  frames.001999.csv  (+59 more)
.github/workflows/: ci.yml
converter/: index.html
simulator/: index-flowchart.html  index.html
ssocr-2.22.2/: ssocr  ssocr.1
